--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -6,78 +6,78 @@
 /* Large Devices, Wide Screens 1280px */
 @media only screen and (max-width: 1200px) {
 
-  .blok_main_1{
-    min-width:initial;
+  .blok_main_1 {
+    min-width: initial;
   }
 }
 
 /* Medium Devices, Desktops 992px */
 @media only screen and (max-width: 991px) {
 
-  
-  .left-group-menu{
+  .left-group-menu {
     display: none;
     position: relative;
     margin-bottom: 15px;
   }
 
-  .menu_categories__link{
-    font-size:16px;
+  .menu_categories__link {
+    font-size: 16px;
   }
 
-  .minBasket_full{
+  .minBasket_full {
     float: right;
   }
 
-  .binfo_image{
+  .binfo_image {
     float: right;
   }
 
-  .menu_categories:first-of-type .menu_categories__item .menu_categories__link{
+  .binfo.active:after {
+    left: 130px;
+  }
+
+  .menu_categories:first-of-type .menu_categories__item .menu_categories__link {
     text-align: center;
   }
 
-  .category_menu .buttonStartMenu:hover + .left-group-menu{
+  .category_menu .buttonStartMenu:hover + .left-group-menu {
     position: relative;
   }
 
-
-  .subCategory{
+  .subCategory {
     position: relative;
-    height: 0;  //////////// это псевдо слайдер для мобильного
-    width: 100%!important;
+    height: 0; //////////// это псевдо слайдер для мобильного
+    width: 100% !important;
     border: none;
     background-color: #fff;
     right: 0;
     left: 0;
   }
-  .subCategory.active{
-    height:initial;
+  .subCategory.active {
+    height: initial;
     transition: all .3s;
   }
-  .subCategory.active > .menu_categories__item{
+  .subCategory.active > .menu_categories__item {
     display: block;
     background-color: #f2fcff;
     background-image: none;
   }
 
-
-  .btn_menu{
+  .btn_menu {
     position: relative;
     float: right;
     border: 1px solid #000;
     background-color: #fff;
   }
-  
-  .blok_main_1.category_menu{
+
+  .blok_main_1.category_menu {
     width: 100%;
   }
-  .buttonStartMenu{
+  .buttonStartMenu {
     display: block;
     margin: 0 auto;
     cursor: pointer;
   }
-
 
   .top-info__inner {
     justify-content: space-around;
@@ -89,10 +89,9 @@
     justify-content: space-between;
     width: 100%;
   }
-  .left-group-vlast{
+  .left-group-vlast {
     display: none;
   }
-
 
   .copyr {
     margin-top: 20px;
@@ -116,18 +115,18 @@
     order: 3;
   }
 
-  .price-item-wrap1:hover{
+  .price-item-wrap1:hover {
     float: none;
-    width:auto;
-    height:auto;
+    width: auto;
+    height: auto;
     margin-bottom: 0;
   }
-  .price-item-wrap1:hover .price-item-box{
+  .price-item-wrap1:hover .price-item-box {
     border: none;
     box-shadow: none;
   }
 
-  .price-item-wrap1{
+  .price-item-wrap1 {
     width: 33%;
   }
 
@@ -149,27 +148,25 @@
     max-width: 300px;
 
   }
-  .search_icon{
+  .search_icon {
     width: 40px;
   }
 
-
-
-  .blok_main_2_1_x_about_item{
+  .blok_main_2_1_x_about_item {
     padding: 0;
-    min-width:initial;
-    width:auto;
-    height:auto;
+    min-width: initial;
+    width: auto;
+    height: auto;
   }
-  .subgr-list-block{
+  .subgr-list-block {
     padding: 0;
-    min-height:initial;
+    min-height: initial;
   }
 
-  .about_item_box{
-    width:auto;
-    max-width:initial;
-    min-height:initial;
+  .about_item_box {
+    width: auto;
+    max-width: initial;
+    min-height: initial;
     height: 300px;
 
   }
@@ -178,7 +175,7 @@
     width: 75%;
   }
 
-  .minBasket_full{
+  .minBasket_full {
     margin-left: 0;
   }
 
@@ -186,87 +183,91 @@
 
 @media only screen and (max-width: 600px) {
 
-  .price-item-pic-wrap{
-    height:auto;
+  .price-item-pic-wrap {
+    height: auto;
     margin: 0 auto;
   }
 
-  .price-item-wrap1{
+  .price-item-wrap1 {
     width: 48%;
-    height:auto;
+    height: auto;
   }
 
-
-  .price-item-box .bl_description__short{
+  .price-item-box .bl_description__short {
     display: none;
   }
 
-
-  .bl_description__attributes{
+  .price-item-box .bl_description__attributes {
     display: none;
   }
-  .buy_container{
+  .buy_container {
     padding: 10px;
   }
 
-  .button_buyProduct{
+  .button_buyProduct {
     float: none;
     margin: 20px auto;
     display: block;
   }
-  .button_continueBuying__link{
+  .button_continueBuying__link {
     display: block;
     text-align: center;
   }
 
-  .blok_main_2_1_x_about_item_cont{
+  .blok_main_2_1_x_about_item_cont {
     height: 300px;
   }
 
 }
+
 /* Extra Small Devices, Phones 480px */
 @media only screen and (max-width: 480px) {
   .block_ssearch {
     left: 15%;
   }
 
-  .logo_link{
+  .logo_link {
     width: 110px;
   }
 
-  .root-logo{
+  .root-logo {
     float: none;
   }
 
-
-  .binfo{
-    min-width:initial;
+  .binfo {
+    min-width: initial;
   }
 
-  .buy_container .price{
+  .binfo.active:after {
+    left: 74px;
+  }
+
+  .buy_container .price {
     padding: 0;
   }
 
-.minBasket_param{
-  display: none;
-}
+  .minBasket_param {
+    display: none;
+  }
 
-  .price-item-wrap1{
+  .price-item-wrap1 {
     margin-top: 10px;
     width: 100%;
   }
 
-  .blok_main_2_1_x_about_item_cont{
-    height:250px;
+  .blok_main_2_1_x_about_item_cont {
+    height: 250px;
   }
 
 }
+
 @media only screen and (max-width: 400px) {
 
-  .about_item_box{
+  .about_item_box {
     height: 250px;
   }
 }
+
 /* Custom, iPhone Retina 320px */
 @media only screen and (max-width: 320px) {
 
